[package]
name = "cloudflare-ddns"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
debug = 0
overflow-checks = false
incremental = false

[profile.release.package."*"]
codegen-units = 1
opt-level = 3

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"], default-features = false }
futures = "0.3.31"
env_logger = "0.11.6"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "time", "macros"] }
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "4.5.27", features = ["derive"] }
toml = "0.8.19"
